# Spreadsheet_LLM_Encoder

./: .gitignore  LICENSE  README.md  Spreadsheet_LLM_Encoder.py  app_helpers.py  chain_of_spreadsheet.py  evaluation.py  example_chain_usage.py  prepare_finetuning_data.py  pyproject.toml  requirements.txt  run_evaluation.py  run_llm_evaluation.py  run_qa_evaluation.py  streamlit_app.py  temp_helpers.py  test_chain_of_spreadsheet.py  test_encoder_compression.py  test_evaluation.py  test_spreadsheet_encoder.py  test_streamlit_app.py
